src/window.h

#define FFI_PLUGIN_EXPORT __declspec(dllexport)
#define FFI_PLUGIN_EXPORT
FFI_PLUGIN_EXPORT
void window_focus(long window_id);
FFI_PLUGIN_EXPORT
void window_blur(long window_id);
FFI_PLUGIN_EXPORT
bool window_is_focused(long window_id);
FFI_PLUGIN_EXPORT
void window_show(long window_id);
FFI_PLUGIN_EXPORT
void window_show_inactive(long window_id);
FFI_PLUGIN_EXPORT
void window_hide(long window_id);
FFI_PLUGIN_EXPORT
bool window_is_visible(long window_id);
FFI_PLUGIN_EXPORT
void window_maximize(long window_id);
FFI_PLUGIN_EXPORT
void window_unmaximize(long window_id);
FFI_PLUGIN_EXPORT
bool window_is_maximized(long window_id);
FFI_PLUGIN_EXPORT
void window_minimize(long window_id);
FFI_PLUGIN_EXPORT
void window_restore(long window_id);
FFI_PLUGIN_EXPORT
bool window_is_minimized(long window_id);
FFI_PLUGIN_EXPORT
void window_set_full_screen(long window_id, bool is_full_screen);
FFI_PLUGIN_EXPORT
bool window_is_full_screen(long window_id);
// FFI_PLUGIN_EXPORT
// void _window_set_background_color(long window_id, NativeColor color);

// FFI_PLUGIN_EXPORT
// NativeColor window_get_background_color(long window_id);

FFI_PLUGIN_EXPORT
void window_set_bounds(long window_id, struct NativeRectangle bounds);
FFI_PLUGIN_EXPORT
struct NativeRectangle window_get_bounds(long window_id);
FFI_PLUGIN_EXPORT
void window_set_size(long window_id, struct NativeSize size, bool animate);
FFI_PLUGIN_EXPORT
struct NativeSize window_get_size(long window_id);
FFI_PLUGIN_EXPORT
void window_set_content_size(long window_id, struct NativeSize size);
FFI_PLUGIN_EXPORT
struct NativeSize window_get_content_size(long window_id);
FFI_PLUGIN_EXPORT
void window_set_minimum_size(long window_id, struct NativeSize size);
FFI_PLUGIN_EXPORT
struct NativeSize window_get_minimum_size(long window_id);
FFI_PLUGIN_EXPORT
void window_set_maximum_size(long window_id, struct NativeSize size);
FFI_PLUGIN_EXPORT
struct NativeSize window_get_maximum_size(long window_id);
FFI_PLUGIN_EXPORT
void window_set_resizable(long window_id, bool is_resizable);
FFI_PLUGIN_EXPORT
bool window_is_resizable(long window_id);
FFI_PLUGIN_EXPORT
void window_set_movable(long window_id, bool is_movable);
FFI_PLUGIN_EXPORT
bool window_is_movable(long window_id);
FFI_PLUGIN_EXPORT
void window_set_minimizable(long window_id, bool is_minimizable);