src/window_manager.h

FFI_PLUGIN_EXPORT
int window_manager_get_current();
FFI_PLUGIN_EXPORT
void window_manager_start_listening();
FFI_PLUGIN_EXPORT
void window_manager_stop_listening();