lib/src/ffi/bindings_generated.dart


  late final _window_manager_get_currentPtr =
      _lookup<ffi.NativeFunction<ffi.Long Function()>>(
          'window_manager_get_current');
  late final _window_manager_get_current =
      _window_manager_get_currentPtr.asFunction<int Function()>();

  void window_manager_start_listening() {
    return _window_manager_start_listening();
  }

  late final _window_manager_start_listeningPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>(
          'window_manager_start_listening');
  late final _window_manager_start_listening =
      _window_manager_start_listeningPtr.asFunction<void Function()>();

  void window_manager_stop_listening() {
    return _window_manager_stop_listening();
  }

  late final _window_manager_stop_listeningPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>(
          'window_manager_stop_listening');
  late final _window_manager_stop_listening =
      _window_manager_stop_listeningPtr.asFunction<void Function()>();

  void window_focus(
    int window_id,
  ) {
    return _window_focus(
      window_id,
    );
  }

  late final _window_focusPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Long)>>('window_focus');
  late final _window_focus = _window_focusPtr.asFunction<void Function(int)>();

  void window_blur(
    int window_id,
  ) {
    return _window_blur(
      window_id,
    );
  }

  late final _window_blurPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Long)>>('window_blur');
  late final _window_blur = _window_blurPtr.asFunction<void Function(int)>();

  bool window_is_focused(
    int window_id,
  ) {
    return _window_is_focused(
      window_id,
    );
  }

  late final _window_is_focusedPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Long)>>(
          'window_is_focused');
  late final _window_is_focused =
      _window_is_focusedPtr.asFunction<bool Function(int)>();

  void window_show(
    int window_id,
  ) {
    return _window_show(
      window_id,
    );
  }

  late final _window_showPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Long)>>('window_show');
  late final _window_show = _window_showPtr.asFunction<void Function(int)>();

  void window_show_inactive(
    int window_id,
  ) {
    return _window_show_inactive(
      window_id,
    );
  }

  late final _window_show_inactivePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Long)>>(
          'window_show_inactive');
  late final _window_show_inactive =
      _window_show_inactivePtr.asFunction<void Function(int)>();

  void window_hide(
    int window_id,
  ) {
    return _window_hide(
      window_id,
    );
  }

  late final _window_hidePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Long)>>('window_hide');
  late final _window_hide = _window_hidePtr.asFunction<void Function(int)>();

  bool window_is_visible(
    int window_id,
  ) {
    return _window_is_visible(
      window_id,
    );
  }

  late final _window_is_visiblePtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Long)>>(
          'window_is_visible');
  late final _window_is_visible =
      _window_is_visiblePtr.asFunction<bool Function(int)>();

  void window_maximize(
    int window_id,
  ) {
    return _window_maximize(
      window_id,
    );
  }

  late final _window_maximizePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Long)>>(
          'window_maximize');
  late final _window_maximize =
      _window_maximizePtr.asFunction<void Function(int)>();

  void window_unmaximize(
    int window_id,
  ) {
    return _window_unmaximize(
      window_id,
    );
  }

  late final _window_unmaximizePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Long)>>(
          'window_unmaximize');
  late final _window_unmaximize =
      _window_unmaximizePtr.asFunction<void Function(int)>();

  bool window_is_maximized(
    int window_id,
  ) {
    return _window_is_maximized(
      window_id,
    );
  }

  late final _window_is_maximizedPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Long)>>(
          'window_is_maximized');
  late final _window_is_maximized =
      _window_is_maximizedPtr.asFunction<bool Function(int)>();

  void window_minimize(
    int window_id,
  ) {
    return _window_minimize(
      window_id,
    );
  }

  late final _window_minimizePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Long)>>(
          'window_minimize');
  late final _window_minimize =
      _window_minimizePtr.asFunction<void Function(int)>();

  void window_restore(
    int window_id,
  ) {
    return _window_restore(
      window_id,
    );
  }

  late final _window_restorePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Long)>>(
          'window_restore');
  late final _window_restore =
      _window_restorePtr.asFunction<void Function(int)>();

  bool window_is_minimized(
    int window_id,
  ) {
    return _window_is_minimized(
      window_id,
    );
  }

  late final _window_is_minimizedPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Long)>>(
          'window_is_minimized');
  late final _window_is_minimized =
      _window_is_minimizedPtr.asFunction<bool Function(int)>();

  void window_set_full_screen(
    int window_id,
    bool is_full_screen,
  ) {
    return _window_set_full_screen(
      window_id,
      is_full_screen,
    );
  }

  late final _window_set_full_screenPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Long, ffi.Bool)>>(
          'window_set_full_screen');
  late final _window_set_full_screen =
      _window_set_full_screenPtr.asFunction<void Function(int, bool)>();

  bool window_is_full_screen(
    int window_id,
  ) {
    return _window_is_full_screen(
      window_id,
    );
  }

  late final _window_is_full_screenPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Long)>>(
          'window_is_full_screen');
  late final _window_is_full_screen =
      _window_is_full_screenPtr.asFunction<bool Function(int)>();

  /// FFI_PLUGIN_EXPORT
  /// NativeColor window_get_background_color(long window_id);
  void window_set_bounds(
    int window_id,
    NativeRectangle bounds,
  ) {
    return _window_set_bounds(
      window_id,
      bounds,
    );
  }

  late final _window_set_boundsPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Long, NativeRectangle)>>(
          'window_set_bounds');
  late final _window_set_bounds =
      _window_set_boundsPtr.asFunction<void Function(int, NativeRectangle)>();

  NativeRectangle window_get_bounds(
    int window_id,
  ) {
    return _window_get_bounds(
      window_id,
    );
  }

  late final _window_get_boundsPtr =
      _lookup<ffi.NativeFunction<NativeRectangle Function(ffi.Long)>>(
          'window_get_bounds');
  late final _window_get_bounds =
      _window_get_boundsPtr.asFunction<NativeRectangle Function(int)>();

  void window_set_size(
    int window_id,
    NativeSize size,
    bool animate,
  ) {
    return _window_set_size(
      window_id,
      size,
      animate,
    );
  }

  late final _window_set_sizePtr = _lookup<
          ffi
          .NativeFunction<ffi.Void Function(ffi.Long, NativeSize, ffi.Bool)>>(
      'window_set_size');
  late final _window_set_size =
      _window_set_sizePtr.asFunction<void Function(int, NativeSize, bool)>();

  NativeSize window_get_size(
    int window_id,
  ) {
    return _window_get_size(
      window_id,
    );
  }

  late final _window_get_sizePtr =
      _lookup<ffi.NativeFunction<NativeSize Function(ffi.Long)>>(
          'window_get_size');
  late final _window_get_size =
      _window_get_sizePtr.asFunction<NativeSize Function(int)>();

  void window_set_content_size(
    int window_id,
    NativeSize size,
  ) {
    return _window_set_content_size(
      window_id,
      size,
    );
  }

  late final _window_set_content_sizePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Long, NativeSize)>>(
          'window_set_content_size');
  late final _window_set_content_size =
      _window_set_content_sizePtr.asFunction<void Function(int, NativeSize)>();

  NativeSize window_get_content_size(
    int window_id,
  ) {
    return _window_get_content_size(
      window_id,
    );
  }

  late final _window_get_content_sizePtr =
      _lookup<ffi.NativeFunction<NativeSize Function(ffi.Long)>>(
          'window_get_content_size');
  late final _window_get_content_size =
      _window_get_content_sizePtr.asFunction<NativeSize Function(int)>();

  void window_set_minimum_size(
    int window_id,
    NativeSize size,
  ) {
    return _window_set_minimum_size(
      window_id,
      size,
    );
  }

  late final _window_set_minimum_sizePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Long, NativeSize)>>(
          'window_set_minimum_size');
  late final _window_set_minimum_size =
      _window_set_minimum_sizePtr.asFunction<void Function(int, NativeSize)>();

  NativeSize window_get_minimum_size(
    int window_id,
  ) {
    return _window_get_minimum_size(
      window_id,
    );
  }

  late final _window_get_minimum_sizePtr =
      _lookup<ffi.NativeFunction<NativeSize Function(ffi.Long)>>(
          'window_get_minimum_size');
  late final _window_get_minimum_size =
      _window_get_minimum_sizePtr.asFunction<NativeSize Function(int)>();

  void window_set_maximum_size(
    int window_id,
    NativeSize size,
  ) {
    return _window_set_maximum_size(
      window_id,
      size,
    );
  }

  late final _window_set_maximum_sizePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Long, NativeSize)>>(
          'window_set_maximum_size');
  late final _window_set_maximum_size =
      _window_set_maximum_sizePtr.asFunction<void Function(int, NativeSize)>();

  NativeSize window_get_maximum_size(
    int window_id,
  ) {
    return _window_get_maximum_size(
      window_id,
    );
  }

  late final _window_get_maximum_sizePtr =
      _lookup<ffi.NativeFunction<NativeSize Function(ffi.Long)>>(
          'window_get_maximum_size');
  late final _window_get_maximum_size =
      _window_get_maximum_sizePtr.asFunction<NativeSize Function(int)>();

  void window_set_resizable(
    int window_id,
    bool is_resizable,
  ) {
    return _window_set_resizable(
      window_id,
      is_resizable,
    );
  }

  late final _window_set_resizablePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Long, ffi.Bool)>>(
          'window_set_resizable');
  late final _window_set_resizable =
      _window_set_resizablePtr.asFunction<void Function(int, bool)>();

  bool window_is_resizable(
    int window_id,
  ) {
    return _window_is_resizable(
      window_id,
    );
  }

  late final _window_is_resizablePtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Long)>>(
          'window_is_resizable');
  late final _window_is_resizable =
      _window_is_resizablePtr.asFunction<bool Function(int)>();

  void window_set_movable(
    int window_id,
    bool is_movable,
  ) {
    return _window_set_movable(
      window_id,
      is_movable,
    );
  }

  late final _window_set_movablePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Long, ffi.Bool)>>(
          'window_set_movable');
  late final _window_set_movable =
      _window_set_movablePtr.asFunction<void Function(int, bool)>();

  bool window_is_movable(
    int window_id,
  ) {
    return _window_is_movable(
      window_id,
    );
  }

  late final _window_is_movablePtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Long)>>(
          'window_is_movable');
  late final _window_is_movable =
      _window_is_movablePtr.asFunction<bool Function(int)>();

  void window_set_minimizable(
    int window_id,
    bool is_minimizable,
  ) {
    return _window_set_minimizable(
      window_id,
      is_minimizable,
    );
  }
